# SVMbenchmark

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  cuda_utils.h  debug.cpp  debug.h  my_stopwatch.h  ohdSVM_wrapper.cpp  ohdSVM_wrapper.h  stopwatch.h  svm-train.cpp  svm_template.cpp  svm_template.h  utils.cpp  utils.h
GPULibSVM/: GPUlibSVM_wrapper.cpp  GPUlibSVM_wrapper.h  gpulibsvm.cpp  gpulibsvm.h
accLibSVM/: acclibSVM_wrapper.cpp  acclibSVM_wrapper.h  acclibsvm.cpp  acclibsvm.h  parallelthreads.cpp  parallelthreads.h
cuSVM/: cuSVMSolver.cu  cuSVM_wrapper.cpp  cuSVM_wrapper.h  cuSVMutil.h  mex.h
cudaSVM/: cudaSVM_internal.h  cudaSVM_kernel.cu  cudaSVM_kernels.h  cudaSVM_kernels_scale.h  cudaSVM_wrapper.cpp  cudaSVM_wrapper.h  cudasvm_train.cpp  cudasvm_train.h
gpuSVM/: cutil.h  gpuSVM_wrapper.cpp  gpuSVM_wrapper.h  license.txt
gpuSVM/common/: deviceSelect.cu  deviceSelect.h  framework.h  svmIO.cpp  svmIO.h
gpuSVM/include/: svmCommon.h  svmTrain.h
gpuSVM/training/: Cache.cpp  Cache.h  Cache_.cpp  Controller.cpp  Controller.h  firstOrder.h  initialize.h  kernelType.h  memoryRoutines.h  reduce.h  reductionOperators.h  secondOrder.h  svmKernels.h  svmTrain.cu  trainingMain.cu
gtSVM/: boost_headers.h  boost_helpers.h  gtSVM_wrapper.cpp  gtSVM_wrapper.h
gtSVM/lib/: cuda_array.cu  cuda_array.hpp  cuda_find_largest.cu  cuda_find_largest.hpp  cuda_partial_sum.cu  cuda_partial_sum.hpp  cuda_reduce.cu  cuda_reduce.hpp  cuda_sparse_kernel.cu  cuda_sparse_kernel.hpp  gtsvm.cpp  gtsvm.h  headers.hpp  helpers.hpp  svm_gt.hpp
libSVM/: libSVM_utils.cpp  libSVM_utils.h  libSVM_wrapper.cpp  libSVM_wrapper.h  svm.cpp  svm.h
main_gpl/: CMakeLists.txt  LICENCE.txt  cuda_utils.h  cudaerror.h  debug.cpp  debug.h  my_stopwatch.h  svm-train.cpp  svm_template.cpp  svm_template.h  utils.cpp  utils.h
multiSVM/: multiSVM_wrapper.cpp  multiSVM_wrapper.h  multisvm.cu
multiSVM/include/: Cache.h  cuTimer.h  globalparams.h  kernelevaluation.h  parseinputs.h  reduction.h  testing.h  training.h  utilities.h
multiSVM/src/common/: Cache.cpp  cuTimer.cu  kernelevaluation.cpp  parseinputs.cpp  shared_kernel.cu  utilities.cpp
multiSVM/src/testing/: testing.cu  testing_kernel.cu
multiSVM/src/training/: globalparams.cu  reduction.cu  reduction_kernel.cu  training.cu  training_kernel.cu
openclSVM/: OpenCLSvm.cpp  OpenCLSvm.h  kernels.cl  openclSVM_wrapper.cpp  openclSVM_wrapper.h  simpleCL.cpp  simpleCL.h
orcusSVM/: OrcusSvm.cu  OrcusSvm.h  cudaerror.cuh  debug.cpp  debug.h  orcusSVM_wrapper.cpp  orcusSVM_wrapper.h
orcusSVM1Block/: OrcusSvm.cu  OrcusSvm.h  calc_x2.cu  calc_x2.h  check_cache.h  csr.cu  csr.h  dev_vars.h  find_nbestv2.h  kernels_daifletcher.h  kernels_klocal.h  kernels_select_ws.h  kernels_smo.h  orcusSVM1Block_wrapper.cpp  orcusSVM1Block_wrapper.h
orcusSVMCPU/: OrcusSvm.cu  OrcusSvm.h  orcusSVMCPU_wrapper.cpp  orcusSVMCPU_wrapper.h
orcusSVMDP/: OrcusSvm.cu  OrcusSvm.h  orcusSVMDP_wrapper.cpp  orcusSVMDP_wrapper.h
wuSVM/: Config.h  abstract_matrix.h  blas_wrappers.h  convert.h  device_context.h  device_wrappers.cu  fileIO.cpp  fileIO.h  hessian.cpp  hessian.h  host_wrappers.cpp  kernel_mult.cpp  kernels.cpp  kernels.h  lasp_matrix.h  lasp_svm.cpp  lasp_svm.h  next_point.cpp  next_point.h  options.h  parsing.cpp  parsing.h  pegasos.cpp  pegasos.h  retraining.cpp  retraining.h  train_subset.cpp  train_subset.h  wuSVM_wrapper.cpp  wuSVM_wrapper.h
